--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div id="kt_header" class="header header-fixed">
 						<!--begin::Container-->
 						<div class="container-fluid d-flex align-items-stretch justify-content-between">
-							<div class="bsl-header-logo d-none d-lg-flex"><img class="bsl-header-img" src="../static/images/logo512.png" alt="logo acme"></div>
+							<div class="bsl-header-logo d-none d-lg-flex"><img class="bsl-header-img" src="static/images/logo512.png" alt="logo acme"></div>
 							<!--begin::Header Menu Wrapper-->
 							<div class="header-menu-wrapper header-menu-wrapper-left">
 								<!--begin::Header Menu-->
@@ -136,7 +136,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										<span class="text-dark-50 font-weight-bolder font-size-base d-none d-md-inline mr-3">Sean</span> -->
 										<span class="symbol symbol-lg-35 symbol-25 symbol-light-success">
 											<span class="symbol-label font-size-h5 font-weight-bold">
-												<img class="bsl-thumb-user" src="../static/images/user.jpg" alt="imagem do usuário">
+												<img class="bsl-thumb-user" src="static/images/user.jpg" alt="imagem do usuário">
 											</span>
 										</span>
 									</div>
@@ -782,7 +782,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<script src="assets/plugins/global/plugins.bundle.js"></script>
 		<script src="assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
 		<script src="assets/js/scripts.bundle.js"></script>
-		<script src="https://keenthemes.com/metronic/assets/js/engage_code.js"></script>
+		<!-- <script src="https://keenthemes.com/metronic/assets/js/engage_code.js"></script> -->
 		<!--end::Global Theme Bundle-->
 		<!--begin::Page Vendors(used by this page)-->
 		<script src="assets/plugins/custom/fullcalendar/fullcalendar.bundle.js"></script>
