--- a/src/index.html
+++ b/src/index.html
@@ -104,9 +104,6 @@ License: You must have a valid license purchased only from themeforest(the above
 										<!--begin::Page Title-->
 										<h5 class="text-dark font-weight-bold mt-2 mb-2 mr-5">Dashboard</h5>
 										<!--end::Page Title-->
-										<!--begin::Actions-->
-										<div class="subheader-separator subheader-separator-ver mt-2 mb-2 mr-4 bg-gray-200"></div>
-										<!--end::Actions-->
 									</div>
 									<!--end::Info-->
 								</div>
@@ -703,8 +700,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<div id="kt_quick_user" class="offcanvas offcanvas-right p-10">
 			<!--begin::Header-->
 			<div class="offcanvas-header d-flex align-items-center justify-content-between pb-5">
-				<h3 class="font-weight-bold m-0">Perfil Do Usuário
-				<small class="text-muted font-size-sm ml-2">12 mensagens</small></h3>
+				<h3 class="font-weight-bold m-0">Perfil Do Usuário</h3>
 				<a href="#" class="btn btn-xs btn-icon btn-light btn-hover-primary" id="kt_quick_user_close">
 					<i class="ki ki-close icon-xs text-muted"></i>
 				</a>
@@ -737,7 +733,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											<!--end::Svg Icon-->
 										</span>
 									</span>
-									<span class="navi-text text-muted text-hover-primary">jm@softplus.com</span>
+									<span class="navi-text text-muted text-hover-primary bsl-word-break">jm@softplus.com</span>
 								</span>
 							</a>
 							<a href="#" class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5">Sair</a>
