--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		<link href="assets/css/themes/layout/brand/dark.css" rel="stylesheet" type="text/css" />
 		<link href="assets/css/themes/layout/aside/dark.css" rel="stylesheet" type="text/css" />
 		<!--end::Layout Themes-->
-		<link href="static/css/style.css" rel="stylesheet" type="text/css" />
+		<link href="static/css/bsl-style.css" rel="stylesheet" type="text/css" />
 		<link rel="shortcut icon" href="static/images/favicon.ico" />
 	</head>
 	<!--end::Head-->
