--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					<div id="kt_header" class="header header-fixed">
 						<!--begin::Container-->
 						<div class="container-fluid d-flex align-items-stretch justify-content-between">
-							<div class="bsl-header-logo d-none d-lg-flex"><img class="bsl-header-img" src="static/images/logo512.png" alt="logo acme"></div>
+							<div class="bsl-header-logo d-none d-lg-flex"><img class="bsl-header-img" src="static/images/bussola-icone.png" alt="logo acme"></div>
 							<!--begin::Header Menu Wrapper-->
 							<div class="header-menu-wrapper header-menu-wrapper-left">
 								<!--begin::Header Menu-->
