--- a/src/index.html
+++ b/src/index.html
@@ -727,7 +727,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									</div>
 									<div class="col-lg-6">
 										<div class="card card-custom gutter-b">
-											<div class="card-body">
+											<div class="card-body card-map">
 											 <div id="kt_leaflet_3" style="height:300px;"></div>
 											</div>
 										</div>
@@ -1263,7 +1263,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												<!--end::Title-->
 											</div>
 											<!--end::Header-->
-											<div class="card-body">
+											<div class="card-body card-item">
 												<!--begin::Chart-->
 												<div id="chart_1"></div>
 												<!--end::Chart-->
@@ -1281,7 +1281,7 @@ License: You must have a valid license purchased only from themeforest(the above
 														Consolidados</h3>
 												</div>
 											</div>
-											<div class="card-body">
+											<div class="card-body card-item">
 												<!--begin::Chart-->
 												<div id="chart_3"></div>
 												<!--end::Chart-->
