Ajustes css, html e js

--- a/src/table.html
+++ b/src/table.html
@@ -748,7 +748,7 @@ License: You must have a valid license purchased only from themeforest(the above
 								<div class="row">
 									<div class="col-lg-12">
 										<div class="outer">
-											<div id="authors3">
+											<div id="yearTable">
 												<!--begin::Header-->
 												<div>
 													<div class="card-toolbar">
@@ -758,7 +758,7 @@ License: You must have a valid license purchased only from themeforest(the above
 															<div class="dropdown-menu dropdown-menu-sm dropdown-menu-right">
 																<!--begin::Navigation-->
 																<ul class="navi navi-hover">
-																	<li class="navi-item" id="y2022">
+																	<li class="navi-item" id="actual">
 																		<span class="navi-link">
 																			<span class="navi-text">2022</span>
 																		</span>
@@ -778,7 +778,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												<!--begin::Body-->
 												<div>
 													<!--begin::Item-->
-													<div class="d-flex-bsl align-items-center mb-10 item" data-status="y2022">
+													<div class="d-flex-bsl align-items-center mb-10 item" data-status="actual">
 														<div class="inner">
 															<table>
 																<thead>
