--- a/src/cards.html
+++ b/src/cards.html
@@ -750,7 +750,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<!--begin::Pic-->
 													<div class="flex-shrink-0 mr-4">
 														<div class="symbol symbol-circle symbol-lg-75">
-															<img src="/metronic/theme/html/demo1/dist/assets/media/project-logos/1.png" alt="image">
+															<img src="static/images/1.png" alt="image">
 														</div>
 													</div>
 													<!--end::Pic-->
@@ -895,7 +895,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<!--begin::Pic-->
 													<div class="flex-shrink-0 mr-4">
 														<div class="symbol symbol-circle symbol-lg-75">
-															<img src="/metronic/theme/html/demo1/dist/assets/media/project-logos/1.png" alt="image">
+															<img src="static/images/1.png" alt="image">
 														</div>
 													</div>
 													<!--end::Pic-->
@@ -949,7 +949,7 @@ License: You must have a valid license purchased only from themeforest(the above
 												<!--end::Info-->
 												<!-- <a href="#" class="btn btn-block btn-sm btn-light-success font-weight-bolder text-uppercase py-4">write message</a> -->
                         <div class="bsl-description">
-													<p class="mb-0">I distinguish three main text objectives.</p>
+													<p class="mb-0">I distinguish three main text objectives. First, your objective</p>
 												</div>
 											</div>
 											<!--end::Body-->
@@ -1040,7 +1040,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<!--begin::Pic-->
 													<div class="flex-shrink-0 mr-4">
 														<div class="symbol symbol-circle symbol-lg-75">
-															<img src="/metronic/theme/html/demo1/dist/assets/media/project-logos/1.png" alt="image">
+															<img src="static/images/1.png" alt="image">
 														</div>
 													</div>
 													<!--end::Pic-->
@@ -1094,14 +1094,14 @@ License: You must have a valid license purchased only from themeforest(the above
 												<!--end::Info-->
 												<!-- <a href="#" class="btn btn-block btn-sm btn-light-success font-weight-bolder text-uppercase py-4">write message</a> -->
                         <div class="bsl-description">
-													<p class="mb-0">I distinguish three main text</p>
+													<p class="mb-0">I distinguish three main text objectives. First, your objective</p>
 												</div>
 											</div>
 											<!--end::Body-->
 										</div>
 										<!--end:: Card-->
 									</div>
-									<!--end::Col-->
+									<!--end::Col-->									
 								</div>
 
 								<div class="row">
@@ -1187,10 +1187,10 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="d-flex align-items-center mb-7">
 													<!--begin::Pic-->
 													<div class="flex-shrink-0 mr-4 mt-lg-0 mt-3">
-														<div class="symbol symbol-circle symbol-lg-75">
-															<img src="/metronic/theme/html/demo1/dist/assets/media/users/300_10.jpg" alt="image">
+														<div class="symbol symbol-circle symbol-lg-60">
+															<img src="static/images/300_1.jpg" alt="image">
 														</div>
-														<div class="symbol symbol-lg-75 symbol-circle symbol-primary d-none">
+														<div class="symbol symbol-lg-60 symbol-circle symbol-primary d-none">
 															<span class="font-size-h3 font-weight-boldest">JM</span>
 														</div>
 													</div>
@@ -1323,10 +1323,10 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="d-flex align-items-center mb-7">
 													<!--begin::Pic-->
 													<div class="flex-shrink-0 mr-4 mt-lg-0 mt-3">
-														<div class="symbol symbol-circle symbol-lg-75">
-															<img src="/metronic/theme/html/demo1/dist/assets/media/users/300_10.jpg" alt="image">
+														<div class="symbol symbol-circle symbol-lg-60">
+															<img src="static/images/300_10.jpg" alt="image">
 														</div>
-														<div class="symbol symbol-lg-75 symbol-circle symbol-primary d-none">
+														<div class="symbol symbol-lg-60 symbol-circle symbol-primary d-none">
 															<span class="font-size-h3 font-weight-boldest">JM</span>
 														</div>
 													</div>
@@ -1705,8 +1705,8 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="d-flex align-items-center mb-4">
 													<!--begin::Pic-->
 													<div class="flex-shrink-0 mr-4 mt-lg-0 mt-3">
-														<div class="symbol symbol-circle symbol-lg-75">
-															<img src="/metronic/theme/html/demo1/dist/assets/media/users/300_10.jpg" alt="image">
+														<div class="symbol symbol-circle symbol-lg-60">
+															<img src="static/images/300_1.jpg" alt="image">
 														</div>
 														<div class="symbol symbol-lg-75 symbol-circle symbol-primary d-none">
 															<span class="font-size-h3 font-weight-boldest">JM</span>
@@ -1715,7 +1715,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<!--end::Pic-->
 													<!--begin::Title-->
 													<div class="d-flex flex-column">
-														<a href="#" class="text-dark font-weight-bold text-hover-primary font-size-h7 mb-0">Luca Doncic</a>
+														<a href="#" class="text-dark font-weight-bold text-hover-primary font-size-h7 mb-1">Luca Doncic</a>
 														
 														<div class="d-flex">
 															<a href="#" class="mr-2"><i class="fab fa-linkedin"></i></a>
@@ -1842,8 +1842,8 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="d-flex align-items-center mb-4">
 													<!--begin::Pic-->
 													<div class="flex-shrink-0 mr-4 mt-lg-0 mt-3">
-														<div class="symbol symbol-circle symbol-lg-75">
-															<img src="/metronic/theme/html/demo1/dist/assets/media/users/300_10.jpg" alt="image">
+														<div class="symbol symbol-circle symbol-lg-60">
+															<img src="static/images/300_10.jpg" alt="image">
 														</div>
 														<div class="symbol symbol-lg-75 symbol-circle symbol-primary d-none">
 															<span class="font-size-h3 font-weight-boldest">JM</span>
@@ -1852,7 +1852,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<!--end::Pic-->
 													<!--begin::Title-->
 													<div class="d-flex flex-column">
-														<a href="#" class="text-dark font-weight-bold text-hover-primary font-size-h7 mb-0">Charlie Stone</a>
+														<a href="#" class="text-dark font-weight-bold text-hover-primary font-size-h7 mb-1">Charlie Stone</a>
 														
 														<div class="d-flex">
 															<a href="#" class="mr-2"><i class="fab fa-linkedin"></i></a>
