Inclusão do icone da lattes

--- a/src/cards.html
+++ b/src/cards.html
@@ -1719,7 +1719,7 @@ License: You must have a valid license purchased only from themeforest(the above
 														
 														<div class="d-flex">
 															<a href="#" class="mr-2"><i class="fab fa-linkedin"></i></a>
-															<a href="#"><i class="fab fa-linkedin"></i></a>
+															<a href="#"><i class="bsl-icon-lattes"></i></a>
 														</div>
 													</div>
 													<!--end::Title-->
@@ -1856,7 +1856,7 @@ License: You must have a valid license purchased only from themeforest(the above
 														
 														<div class="d-flex">
 															<a href="#" class="mr-2"><i class="fab fa-linkedin"></i></a>
-															<a href="#"><i class="fab fa-linkedin"></i></a>
+															<a href="#"><i class="bsl-icon-lattes"></i></a>
 														</div>
 													</div>
 													<!--end::Title-->
