Ajustes na logo do card e botões

--- a/src/cards.html
+++ b/src/cards.html
@@ -749,8 +749,8 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="d-flex align-items-center mb-4">
 													<!--begin::Pic-->
 													<div class="flex-shrink-0 mr-4">
-														<div class="symbol symbol-circle symbol-lg-75">
-															<img src="static/images/1.png" alt="image">
+														<div class="bsl-symbol-2 d-flex align-items-center">
+															<img src="static/images/bussola-icone.png" alt="image">
 														</div>
 													</div>
 													<!--end::Pic-->
@@ -894,8 +894,8 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="d-flex align-items-center mb-4">
 													<!--begin::Pic-->
 													<div class="flex-shrink-0 mr-4">
-														<div class="symbol symbol-circle symbol-lg-75">
-															<img src="static/images/1.png" alt="image">
+														<div class="bsl-symbol-2 d-flex align-items-center">
+															<img src="static/images/bussola-icone.png" alt="image">
 														</div>
 													</div>
 													<!--end::Pic-->
@@ -1039,8 +1039,8 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="d-flex align-items-center mb-4">
 													<!--begin::Pic-->
 													<div class="flex-shrink-0 mr-4">
-														<div class="symbol symbol-circle symbol-lg-75">
-															<img src="static/images/1.png" alt="image">
+														<div class="bsl-symbol-2 d-flex align-items-center">
+															<img src="static/images/bussola-icone.png" alt="image">
 														</div>
 													</div>
 													<!--end::Pic-->
@@ -1101,7 +1101,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 										<!--end:: Card-->
 									</div>
-									<!--end::Col-->									
+									<!--end::Col-->								
 								</div>
 
 								<div class="row">
@@ -1605,8 +1605,8 @@ License: You must have a valid license purchased only from themeforest(the above
 												</div>
 												<!--end::Info-->
 												<div class="d-flex justify-content-between align-items-cente bsl-actions">
-													<a href="#" class="btn btn-sm btn-warning font-weight-bolder py-4">Aceitar convite</a>
-													<a href="#" class="btn btn-sm btn-warning font-weight-bolder py-4">Recusar convite</a>
+													<a href="#" class="btn btn-sm btn-warning font-weight-bolder py-4">Aceitar <br />convite</a>
+													<a href="#" class="btn btn-sm btn-warning font-weight-bolder py-4">Recusar <br />convite</a>
 												</div>
 											</div>
 											<!--end::Body-->
