Ajustes nos cards

--- a/src/cards.html
+++ b/src/cards.html
@@ -746,20 +746,20 @@ License: You must have a valid license purchased only from themeforest(the above
 												</div>
 												<!--end::Toolbar-->
 												<!--begin::User-->
-												<div class="d-flex align-items-center mb-4">
-													<!--begin::Pic-->
-													<div class="flex-shrink-0 mr-4">
-														<div class="bsl-symbol-2 d-flex align-items-center">
-															<img src="static/images/bussola-icone.png" alt="image">
-														</div>
-													</div>
-													<!--end::Pic-->
+												<div class="d-flex align-items-center justify-content-between mb-4">													
 													<!--begin::Title-->
 													<div class="d-flex flex-column">
 														<a href="#" class="text-dark font-weight-bold text-hover-primary font-size-h4 mb-0">Adidas</a>
 														<span class="text-muted font-weight-bold">Incubado Residente</span>
 													</div>
 													<!--end::Title-->
+													<!--begin::Pic-->
+													<div class="flex-shrink-0 ml-4">
+														<div class="bsl-symbol-2 d-flex align-items-center">
+															<img src="static/images/bussola-icone.png" alt="image">
+														</div>
+													</div>
+													<!--end::Pic-->
 												</div>
 												<!--end::User-->
 												<!--begin::Desc-->
@@ -891,20 +891,20 @@ License: You must have a valid license purchased only from themeforest(the above
 												</div>
 												<!--end::Toolbar-->
 												<!--begin::User-->
-												<div class="d-flex align-items-center mb-4">
-													<!--begin::Pic-->
-													<div class="flex-shrink-0 mr-4">
-														<div class="bsl-symbol-2 d-flex align-items-center">
-															<img src="static/images/bussola-icone.png" alt="image">
-														</div>
-													</div>
-													<!--end::Pic-->
+												<div class="d-flex align-items-center justify-content-between mb-4">													
 													<!--begin::Title-->
 													<div class="d-flex flex-column">
 														<a href="#" class="text-dark font-weight-bold text-hover-primary font-size-h4 mb-0">Adidas</a>
 														<span class="text-muted font-weight-bold">Incubado Residente</span>
 													</div>
 													<!--end::Title-->
+													<!--begin::Pic-->
+													<div class="flex-shrink-0 ml-4">
+														<div class="bsl-symbol-2 d-flex align-items-center">
+															<img src="static/images/bussola-icone.png" alt="image">
+														</div>
+													</div>
+													<!--end::Pic-->
 												</div>
 												<!--end::User-->
 												<!--begin::Desc-->
@@ -1036,20 +1036,20 @@ License: You must have a valid license purchased only from themeforest(the above
 												</div>
 												<!--end::Toolbar-->
 												<!--begin::User-->
-												<div class="d-flex align-items-center mb-4">
-													<!--begin::Pic-->
-													<div class="flex-shrink-0 mr-4">
-														<div class="bsl-symbol-2 d-flex align-items-center">
-															<img src="static/images/bussola-icone.png" alt="image">
-														</div>
-													</div>
-													<!--end::Pic-->
+												<div class="d-flex align-items-center justify-content-between mb-4">													
 													<!--begin::Title-->
 													<div class="d-flex flex-column">
 														<a href="#" class="text-dark font-weight-bold text-hover-primary font-size-h4 mb-0">Adidas</a>
 														<span class="text-muted font-weight-bold">Incubado Residente</span>
 													</div>
 													<!--end::Title-->
+													<!--begin::Pic-->
+													<div class="flex-shrink-0 ml-4">
+														<div class="bsl-symbol-2 d-flex align-items-center">
+															<img src="static/images/bussola-icone.png" alt="image">
+														</div>
+													</div>
+													<!--end::Pic-->
 												</div>
 												<!--end::User-->
 												<!--begin::Desc-->
@@ -1101,7 +1101,7 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 										<!--end:: Card-->
 									</div>
-									<!--end::Col-->								
+									<!--end::Col-->							
 								</div>
 
 								<div class="row">
@@ -1465,14 +1465,14 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
 													<!--end::Pic-->
 													<!--begin::Title-->
-													<div class="text-center">
+													<div class="text-height overflow-hidden text-center">
 														<span class="text-dark font-weight-bold text-hover-primary font-size-h4 mb-0">Incubadora ACME</span>
 													</div>
 													<!--end::Title-->
 												</div>
 												<!--end::User-->
 												<!--begin::Info-->
-												<div class="mb-7 bsl-list-item">
+												<div class="mb-7">
 													<div class="d-flex justify-content-between align-items-center">
 														<span class="text-dark-75 font-weight-bolder mr-2">Email:</span>
 														<a href="#" class="text-muted text-hover-primary">giannis@fifestudios.com</a>
@@ -1582,14 +1582,14 @@ License: You must have a valid license purchased only from themeforest(the above
 													</div>
 													<!--end::Pic-->
 													<!--begin::Title-->
-													<div class="text-center">
+													<div class="text-height overflow-hidden text-center">
 														<span class="text-dark font-weight-bold text-hover-primary font-size-h4 mb-0">Incubadora ACME</span>
 													</div>
 													<!--end::Title-->
 												</div>
 												<!--end::User-->
 												<!--begin::Info-->
-												<div class="mb-7 bsl-list-item">
+												<div class="mb-7">
 													<div class="d-flex justify-content-between align-items-center">
 														<span class="text-dark-75 font-weight-bolder mr-2">Email:</span>
 														<a href="#" class="text-muted text-hover-primary">jason@fifestudios.com</a>
