Ajustes nas logos dos cards

--- a/src/cards.html
+++ b/src/cards.html
@@ -1576,8 +1576,8 @@ License: You must have a valid license purchased only from themeforest(the above
 												<div class="mb-7">
 													<!--begin::Pic-->
 													<div class="mt-lg-0 mt-3 mb-2 text-center">
-														<div class="bsl-symbol d-flex align-items-center text-center symbol-primary">
-															<img src="static/images/bussola-icone.png" alt="image">
+														<div class="bsl-logo bsl-symbol d-flex align-items-center text-center symbol-primary">
+															<img src="static/images/nascente.jpg" alt="image">
 														</div>
 													</div>
 													<!--end::Pic-->
