Ajuste na table anual com inclusão de uma classe

--- a/src/table.html
+++ b/src/table.html
@@ -780,7 +780,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<!--begin::Item-->
 													<div class="d-flex-bsl align-items-center mb-10 item" data-status="actual">
 														<div class="inner">
-															<table>
+															<table class="table-yearly">
 																<thead>
 																	<tr>
 																		<th class="hard_left bdl bg">Realizado</th>
@@ -1016,7 +1016,7 @@ License: You must have a valid license purchased only from themeforest(the above
 													<!--begin::Item-->
 													<div class="d-flex-bsl align-items-center mb-10 item" data-status="y2021">
 														<div class="inner">
-															<table>
+															<table class="table-yearly">
 																<thead>
 																	<tr>
 																		<th class="hard_left bdl bg">Realizado 21</th>
