Ajustes de layout nas tabelas

--- a/src/painel.html
+++ b/src/painel.html
@@ -740,7 +740,7 @@ License: You must have a valid license purchased only from themeforest(the above
                               <div class="tab-content">
                                 <!--begin::Table-->
                                 <div class="table-responsive">
-                                  <table class="table table-head-custom table-head-bg table-borderless table-vertical-center">
+                                  <table class="table table-head-custom table-head-bg table-borderless">
                                     <thead>
                                       <tr class="text-left text-uppercase">
                                         <th width="20%" style="min-width: 250px" class="pl-7">
@@ -890,7 +890,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                         </td>
                                       </tr>
                                       <tr>
-                                        <td class="pl-0 py-8">
+                                        <td class="pl-0 py-3">
                                           <div class="d-flex align-items-center font-size-lg">
                                             <div class="d-flex align-items-center timeline-badge mr-4">
                                               <i class="bsl-icon-legend bsl-text-danger"></i>
