--- a/src/selecao.html
+++ b/src/selecao.html
@@ -1328,19 +1328,11 @@ License: You must have a valid license purchased only from themeforest(the above
 																</tr>
 																<tr>
 																	<td class="company pt-10">
-																		<div class="d-flex-bsl align-items-center mb-10">
-																			<div class="card-body pt-2">
-																					<!--begin::Symbol-->
-																					<div class="symbol symbol-40 symbol-light-success mr-5">
-																						<span class="symbol-label">
-																							<img src="assets/media/svg/avatars/009-boy-4.svg" class="h-75 align-self-end" alt="">
-																						</span>
-																					</div>
-																					<!--end::Symbol-->
+																		<div class="d-flex-bsl align-items-center">
+																			<div class="card-body">
 																					<!--begin::Text-->
 																					<div class="d-flex flex-column flex-grow-1 font-weight-bold">
-																						<span class="text-dark mb-1 font-size-lg">Adidas</span>
-																						<span class="text-muted">Incubadora</span>
+																						<span class="text-dark mb-1 font-size-lg">Parecer Final</span>
 																					</div>
 																					<!--end::Text-->
 																			</div>
@@ -1348,7 +1340,7 @@ License: You must have a valid license purchased only from themeforest(the above
 																	</td>
 																	<td class="userDescription pt-10">
 																		<div class="d-flex-bsl align-items-center mb-10">
-																			<div class="card-body pt-2">
+																			<div class="card-body">
 																					<!--begin::Symbol-->
 																					<div class="symbol symbol-40 symbol-light-success mr-5">
 																						<span class="symbol-label">
